--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO = "mongodb+srv://natanoob:root@cluster0.dfvheoh.mongodb.net/epasabuymo?retryWrites=true&w=majority"
+MONGO = "mongodb+srv://natanoob:root@cluster0.dfvheoh.mongodb.net/movie?retryWrites=true&w=majority"
 
 JWT = "f768dasfhuifjnads"
